kubernetes/apps/openbao/openbao/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: OpenBao
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: openbao.png
    gethomepage.dev/description: Gestion des secrets
    gethomepage.dev/siteMonitor: "https://bao.${SECRET_DOMAIN}"
spec:
  hostnames:
    - "bao.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: openbao
          port: 8200
